# elli_fit

./: fit.py  graphique.py  main.py
elli_fit/: .todo  DOC_FONCTIONNEMENT_SRC.md  pyproject.toml
elli_fit/examples/: case_shadow_triptych.py  case_two_shadow_average.py  demo_cli.py  demo_plot_from_csv.py
elli_fit/examples/out_case/: Capture Oct 20 2025_summary.csv
elli_fit/examples/out_triptych/: Capture Oct 20 2025_summary.csv
elli_fit/examples/out_triptych_debug/: Capture Oct 20 2025_summary.csv
elli_fit/examples/test_data/: Ellipse 100x100_full.csv  Ellipse Outline 100x100.csv  Résumé ellipsoïde 20x20.csv
elli_fit/promt/: promtos.txt
elli_fit/src/elli_fit/: __init__.py  core.py  io.py  plotting.py
elli_fit/src/elli_fit.egg-info/: SOURCES.txt
elli_fit/tests/: test_core.py  test_examples_demos.py  test_pipeline_mask_and_fit.py
elli_fit/tools/: watch_and_test.py
