[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elli_fit"
version = "0.2.0"
description = "Lightweight ellipse fitting library (NumPy-only)"
authors = [{name = "Adrian Utge Le Gall"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["numpy"]

[project.optional-dependencies]
plotting = ["matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
